fix(toc): element can't fully collapse

--- a/quartz/components/styles/toc.scss
+++ b/quartz/components/styles/toc.scss
@@ -5,7 +5,7 @@
   flex-direction: column;
 
   overflow-y: hidden;
-  min-height: 4rem;
+  min-height: 1.2rem;
   flex: 0 1 auto;
   &:has(button.toc-header.collapsed) {
     flex: 0 1 1.2rem;
